samples/_failures_safe/1761212711_9bf419_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14ad599e.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_14ad599e.c:143:5: error: expected identifier or ‘(’ at end of input
  143 |     for (int
      |     ^~~
./samples/SAFE/__tmp_14ad599e.c:143:5: error: expected declaration or statement at end of input
